--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
 - sh -e /etc/init.d/xvfb start
 
 script:
-- npm test -- --single-run
+- npm test -- --watch=false
 
 after_success:
 - npm run build -- --aot --prod
