--- a/.travis.yml
+++ b/.travis.yml
@@ -23,9 +23,16 @@ after_success:
 - npm run build -- --aot --prod
 
 deploy:
-  provider: script
+- provider: script
   skip_cleanup: true
   script:
   - npm run deploy -- --token=$FIREBASE_KEY
+  on:
+    branch: master
+- provider: script
+  skip_cleanup: true
+  script:
+  - npm run build -- --aot --prod --configuration=arhs
+  - npm run deploy -- --token=$FIREBASE_ARHS_KEY -P arhs-bookmarks
   on:
     branch: master
