--- a/.travis.yml
+++ b/.travis.yml
@@ -26,13 +26,12 @@ deploy:
 - provider: script
   skip_cleanup: true
   script:
-  - npm run deploy -- --token=$FIREBASE_KEY
+    npm run deploy -- --token=$FIREBASE_KEY
   on:
     branch: master
 - provider: script
   skip_cleanup: true
   script:
-  - npm run build -- --aot --prod --configuration=arhs
-  - npm run deploy -- --token=$FIREBASE_ARHS_KEY -P arhs-bookmarks
+    npm run build -- --aot --prod --configuration=arhs && npm run deploy -- --token=$FIREBASE_ARHS_KEY -P arhs-bookmarks
   on:
     branch: master
