--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,9 @@ before_install:
 - sh -e /etc/init.d/xvfb start
 
 script:
+- npm run lint
 - npm test -- --watch=false
+- npm run e2e
 
 after_success:
 - npm run build -- --aot --prod
