--- a/.travis.yml
+++ b/.travis.yml
@@ -4,17 +4,19 @@ dist: trusty
 language: node_js
 node_js: "lts/*"
 
-apt:
-  sources:
-  - google-chrome
-  packages:
-  - google-chrome-stable
-  - google-chrome-beta
+#apt:
+#  sources:
+#  - google-chrome
+#  packages:
+#  - google-chrome-stable
+#  - google-chrome-beta
+addons:
+  chrome: stable
 
-before_install:
-- export CHROME_BIN=chromium-browser
-- export DISPLAY=:99.0
-- sh -e /etc/init.d/xvfb start
+#before_install:
+#- export CHROME_BIN=chromium-browser
+#- export DISPLAY=:99.0
+#- sh -e /etc/init.d/xvfb start
 
 script:
 - npm run lint
