--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,10 @@ node_js: "lts/*"
 addons:
   chrome: stable
 
-#before_install:
-#- export CHROME_BIN=chromium-browser
-#- export DISPLAY=:99.0
-#- sh -e /etc/init.d/xvfb start
+before_install:
+- export CHROME_BIN=chromium-browser
+- export DISPLAY=:99.0
+- sh -e /etc/init.d/xvfb start
 
 script:
 - npm run lint
