--- a/package.json
+++ b/package.json
@@ -13,30 +13,29 @@
   },
   "private": true,
   "dependencies": {
-	"@angular/animations": "^7.1.1",
-	"@angular/common": "^7.1.1",
-	"@angular/compiler": "^7.1.1",
-	"@angular/core": "^7.1.1",
-	"@angular/forms": "^7.1.1",
-	"@angular/http": "^7.1.1",
-	"@angular/platform-browser": "^7.1.1",
-	"@angular/platform-browser-dynamic": "^7.1.1",
-	"@angular/router": "^7.1.1",
+	  "@angular/animations": "^7.1.1",
+	  "@angular/common": "^7.1.1",
+	  "@angular/compiler": "^7.1.1",
+	  "@angular/core": "^7.1.1",
+	  "@angular/forms": "^7.1.1",
+	  "@angular/platform-browser": "^7.1.1",
+	  "@angular/platform-browser-dynamic": "^7.1.1",
+	  "@angular/router": "^7.1.1",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
-	"tslib": "^1.9.0",
-    "zone.js": "~0.8.26"
+	  "tslib": "^1.9.0",
+	  "zone.js": "~0.9.1"
   },
   "devDependencies": {
-	"@angular-devkit/build-angular": "~0.11.0",
-	"@angular/cli": "~7.1.0",
-	"@angular/compiler-cli": "^7.1.1",
-	"@angular/language-service": "^7.1.1",
+	  "@angular-devkit/build-angular": "~0.802.2",
+	  "@angular/cli": "~8.2.2",
+	  "@angular/compiler-cli": "^7.1.1",
+	  "@angular/language-service": "^7.1.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.3.0",
+	  "codelyzer": "^5.0.1",
     "firebase-tools": "^5.1.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -48,6 +47,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-	"typescript": "~3.1.6"
+	  "typescript": "~3.1.6"
   }
 }
