--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,11 @@ before_install:
 
 script:
 - npm run lint
-- npm test -- --watch=false
+- npm test
 - npm run e2e
 
 after_success:
-- npm run build -- --aot --prod
+	- npm run build
 
 deploy:
 - provider: script
