--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
+	  "build": "ng build --aot --prod",
+	  "build:dev": "ng build",
+	  "test": "ng test -- --watch=false",
+	  "test:dev": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "deploy": "firebase deploy",
@@ -13,25 +15,25 @@
   },
   "private": true,
   "dependencies": {
-	  "@angular/animations": "^7.1.1",
-	  "@angular/common": "^7.1.1",
-	  "@angular/compiler": "^7.1.1",
-	  "@angular/core": "^7.1.1",
-	  "@angular/forms": "^7.1.1",
-	  "@angular/platform-browser": "^7.1.1",
-	  "@angular/platform-browser-dynamic": "^7.1.1",
-	  "@angular/router": "^7.1.1",
+	  "@angular/animations": "^8.2.2",
+	  "@angular/common": "^8.2.2",
+	  "@angular/compiler": "^8.2.2",
+	  "@angular/core": "^8.2.2",
+	  "@angular/forms": "^8.2.2",
+	  "@angular/platform-browser": "^8.2.2",
+	  "@angular/platform-browser-dynamic": "^8.2.2",
+	  "@angular/router": "^8.2.2",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
+	  "rxjs": "~6.5.2",
 	  "tslib": "^1.9.0",
 	  "zone.js": "~0.9.1"
   },
   "devDependencies": {
 	  "@angular-devkit/build-angular": "~0.802.2",
 	  "@angular/cli": "~8.2.2",
-	  "@angular/compiler-cli": "^7.1.1",
-	  "@angular/language-service": "^7.1.1",
+	  "@angular/compiler-cli": "^8.2.2",
+	  "@angular/language-service": "^8.2.2",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -47,6 +49,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-	  "typescript": "~3.1.6"
+	  "typescript": "~3.5.3"
   }
 }
