--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ script:
 - npm run e2e
 
 after_success:
-	- npm run build
+- npm run build
 
 deploy:
 - provider: script
@@ -36,6 +36,6 @@ deploy:
 - provider: script
   skip_cleanup: true
   script:
-	  npm run build --configuration=arhs && npm run deploy -- --token=$FIREBASE_KEY -P arhs-bookmarks
+    npm run build -- --configuration=arhs && npm run deploy -- --token=$FIREBASE_KEY -P arhs-bookmarks
   on:
     branch: master
