--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 sudo: required
 dist: xenial
 
+services:
+  - xvfb
+
 language: node_js
 node_js: "lts/*"
 
@@ -16,7 +19,6 @@ addons:
 before_install:
 - export CHROME_BIN=chromium-browser
 - export DISPLAY=:99.0
-- sh -e /etc/init.d/xvfb start
 
 script:
 - npm run lint
