build: update travis use headless browser for test

--- a/angular.json
+++ b/angular.json
@@ -103,17 +103,23 @@
 					"options": {
 						"main": "src/test.ts",
 						"polyfills": "src/polyfills.ts",
-						"tsConfig": "src/tsconfig.spec.json",
-						"karmaConfig": "src/karma.conf.js",
-						"styles": [
-							"src/styles.css"
-						],
-						"scripts": [],
-						"assets": [
-							"src/favicon.ico",
-							"src/assets"
-						]
+					  "tsConfig": "src/tsconfig.spec.json",
+					  "karmaConfig": "src/karma.conf.js",
+					  "styles": [
+						"src/styles.css"
+					  ],
+					  "scripts": [],
+					  "assets": [
+						"src/favicon.ico",
+						"src/assets"
+					  ]
+					},
+				  "configurations": {
+					"production": {
+					  "browsers": "ChromeHeadlessNoSandbox",
+					  "watch": false
 					}
+				  }
 				},
 				"lint": {
 					"builder": "@angular-devkit/build-angular:tslint",
