build(CI/CD): fix cd, deploy on both servers + only on github actions

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,23 +20,23 @@ before_install:
 - export DISPLAY=:99.0
 
 script:
-- npm run lint
-- npm test
-- npm run e2e
+  - npm run lint
+  - npm test
+  - npm run e2e
 
 after_success:
-- npm run build
+  - npm run build
 
-deploy:
-- provider: script
-  skip_cleanup: true
-  script:
-    npm run deploy -- --token=$FIREBASE_KEY
-  on:
-    branch: master
-- provider: script
-  skip_cleanup: true
-  script:
-    npm run build -- --configuration=arhs && npm run deploy -- --token=$FIREBASE_KEY -P arhs-bookmarks
-  on:
-    branch: master
+#deploy:
+#- provider: script
+#  skip_cleanup: true
+#  script:
+#    npm run deploy -- --token=$FIREBASE_KEY
+#  on:
+#    branch: master
+#- provider: script
+#  skip_cleanup: true
+#  script:
+#    npm run build -- --configuration=arhs && npm run deploy -- --token=$FIREBASE_KEY -P arhs-bookmarks
+#  on:
+#    branch: master
