--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -34,6 +34,9 @@ jobs:
       - name: npm e2e
         run: npm run e2e
 
-      - name: deploy to firebase
+      - name: deploy to firebase (demo)
+        if: github.ref == 'refs/heads/master' && matrix.node-version == '12.x'
+        run: npm run deploy -- --token=$FIREBASE_KEY
+      - name: deploy to firebase (arhs-bookmarks)
         if: github.ref == 'refs/heads/master' && matrix.node-version == '12.x'
         run: npm run build -- --configuration=arhs && npm run deploy -- --token=${{secrets.FIREBASE_KEY}} -P arhs-bookmarks
