--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
 	"@angular/platform-browser": "^11.2.13",
 	"@angular/platform-browser-dynamic": "^11.2.13",
 	"@angular/router": "^11.2.13",
-	"bootstrap": "^4.1.3",
-	"core-js": "^2.5.4",
-	"rxjs": "~6.6.3",
-	"tslib": "^2.0.0",
+	"bootstrap": "^4.6.0",
+	"core-js": "^2.6.12",
+	"rxjs": "^6.6.7",
+	"tslib": "^2.2.0",
 	"zone.js": "~0.10.3"
   },
   "devDependencies": {
@@ -38,20 +38,20 @@
 	"@angular/compiler-cli": "^11.2.13",
 	"@angular/language-service": "^11.2.13",
 	"@types/jasmine": "~3.6.0",
-	"@types/jasminewd2": "~2.0.3",
-	"@types/node": "^12.11.1",
-	"codelyzer": "^6.0.0",
-	"firebase-tools": "^5.1.1",
+	"@types/jasminewd2": "^2.0.9",
+	"@types/node": "^12.20.12",
+	"codelyzer": "^6.0.2",
+	"firebase-tools": "^9.10.2",
 	"jasmine-core": "~3.6.0",
 	"jasmine-spec-reporter": "~5.0.0",
 	"karma": "~6.3.2",
 	"karma-chrome-launcher": "~3.1.0",
 	"karma-coverage-istanbul-reporter": "~3.0.2",
 	"karma-jasmine": "~4.0.0",
-	"karma-jasmine-html-reporter": "^1.5.0",
+	"karma-jasmine-html-reporter": "^1.6.0",
 	"protractor": "~7.0.0",
 	"ts-node": "~7.0.0",
-	"tslint": "~6.1.0",
+	"tslint": "^6.1.3",
 	"typescript": "~4.1.5"
   }
 }
