chore(npm): update dependencies

--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
 	"ng": "ng",
 	"start": "ng serve",
 	"start:arhs": "ng serve --configuration=arhs",
-	"build": "ng build --aot --prod",
+	"build": "ng build --aot --configuration production",
 	"build:dev": "ng build",
-	"test": "ng test --prod",
+	"test": "ng test --configuration production",
 	"test:dev": "ng test",
 	"lint": "ng lint",
-	"e2e": "ng e2e --prod",
+	"e2e": "ng e2e --configuration production",
 	"e2e:dev": "ng e2e",
 	"deploy": "firebase deploy",
 	"firebase": "firebase",
@@ -33,8 +33,8 @@
 	"zone.js": "~0.11.4"
   },
   "devDependencies": {
-	"@angular-devkit/build-angular": "~12.0.1",
-	"@angular/cli": "~12.0.1",
+	"@angular-devkit/build-angular": "~12.1.1",
+	"@angular/cli": "~12.1.1",
 	"@angular/compiler-cli": "^12.0.1",
 	"@angular/language-service": "^12.0.1",
 	"@types/jasmine": "~3.6.0",
