--- a/.editorconfig
+++ b/.editorconfig
@@ -4,8 +4,7 @@ root = true
 [*]
 charset = utf-8
 indent_style = tab
-indent_size = 4
-tab_width = 4
+indent_size = tab
 insert_final_newline = true
 trim_trailing_whitespace = true
 
