--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "bookmarks",
 	"version": "0.0.0",
 	"scripts": {
+		"eslint": "eslint --init",
 		"ng": "ng",
 		"start": "ng serve",
 		"start:arhs": "ng serve --configuration=arhs",
@@ -34,13 +35,22 @@
 	},
 	"devDependencies": {
 		"@angular-devkit/build-angular": "~13.3.7",
+		"@angular-eslint/builder": "13.2.1",
+		"@angular-eslint/eslint-plugin": "13.2.1",
+		"@angular-eslint/eslint-plugin-template": "13.2.1",
+		"@angular-eslint/schematics": "13.2.1",
+		"@angular-eslint/template-parser": "13.2.1",
 		"@angular/cli": "~13.3.7",
 		"@angular/compiler-cli": "^13.3.10",
 		"@angular/language-service": "^13.3.10",
 		"@types/jasmine": "~3.6.0",
 		"@types/jasminewd2": "^2.0.9",
 		"@types/node": "^12.20.12",
+		"@typescript-eslint/eslint-plugin": "^5.26.0",
+		"@typescript-eslint/parser": "^5.26.0",
 		"codelyzer": "^6.0.2",
+		"eslint": "^8.16.0",
+		"eslint-config-google": "^0.14.0",
 		"firebase-tools": "^9.10.2",
 		"jasmine-core": "~3.6.0",
 		"jasmine-spec-reporter": "~5.0.0",
