--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
 	},
 	"private": true,
 	"dependencies": {
-		"@angular/animations": "^13.3.10",
-		"@angular/common": "^13.3.10",
-		"@angular/compiler": "^13.3.10",
-		"@angular/core": "^13.3.10",
-		"@angular/forms": "^13.3.10",
-		"@angular/platform-browser": "^13.3.10",
-		"@angular/platform-browser-dynamic": "^13.3.10",
-		"@angular/router": "^13.3.10",
+		"@angular/animations": "^14.2.12",
+		"@angular/common": "^14.2.12",
+		"@angular/compiler": "^14.2.12",
+		"@angular/core": "^14.2.12",
+		"@angular/forms": "^14.2.12",
+		"@angular/platform-browser": "^14.2.12",
+		"@angular/platform-browser-dynamic": "^14.2.12",
+		"@angular/router": "^14.2.12",
 		"bootstrap": "^4.6.0",
 		"core-js": "^2.6.12",
 		"rxjs": "^6.6.7",
@@ -34,22 +34,22 @@
 		"zone.js": "~0.11.4"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "~13.3.7",
-		"@angular-eslint/builder": "13.2.1",
-		"@angular-eslint/eslint-plugin": "13.2.1",
-		"@angular-eslint/eslint-plugin-template": "13.2.1",
-		"@angular-eslint/schematics": "13.2.1",
-		"@angular-eslint/template-parser": "13.2.1",
-		"@angular/cli": "~13.3.7",
-		"@angular/compiler-cli": "^13.3.10",
-		"@angular/language-service": "^13.3.10",
+		"@angular-devkit/build-angular": "^14.2.10",
+		"@angular-eslint/builder": "14.4.0",
+		"@angular-eslint/eslint-plugin": "14.4.0",
+		"@angular-eslint/eslint-plugin-template": "14.4.0",
+		"@angular-eslint/schematics": "14.4.0",
+		"@angular-eslint/template-parser": "14.4.0",
+		"@angular/cli": "^14.2.10",
+		"@angular/compiler-cli": "^14.2.12",
+		"@angular/language-service": "^14.2.12",
 		"@types/jasmine": "~3.6.0",
 		"@types/jasminewd2": "^2.0.9",
 		"@types/node": "^12.20.12",
-		"@typescript-eslint/eslint-plugin": "^5.26.0",
-		"@typescript-eslint/parser": "^5.26.0",
+		"@typescript-eslint/eslint-plugin": "^5.36.2",
+		"@typescript-eslint/parser": "^5.36.2",
 		"codelyzer": "^6.0.2",
-		"eslint": "^8.16.0",
+		"eslint": "^8.23.0",
 		"eslint-config-google": "^0.14.0",
 		"firebase-tools": "^11.0.1",
 		"jasmine-core": "~3.6.0",
